RbA Build/src/objects/Purchase_Order__c.object
<CustomObject>
    <description>The purchase order header for ordering RbA and 3rd party products linked to order line items</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments regarding the purchase order.</description>
        <inlineHelpText>Comments regarding the purchase order.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <description>The PO&apos;s confirmation number from the vendor.</description>
        <inlineHelpText>The PO&apos;s confirmation number from the vendor.</inlineHelpText>
        <label>Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Timestamp__c</fullName>
        <description>The date and time this order was confirmed.</description>
        <inlineHelpText>The date and time this order was confirmed.</inlineHelpText>
        <label>Confirmed Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date of the purchase order</description>
        <inlineHelpText>The date of the purchase order</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Ship_Date__c</fullName>
        <description>The estimated ship date for the purchase order from the vendor.</description>
        <inlineHelpText>The estimated ship date for the purchase order from the vendor.</inlineHelpText>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>The invoice number linked to this purchase order.</description>
        <inlineHelpText>The invoice number linked to this purchase order.</inlineHelpText>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent sales order of this purchase order</description>
        <inlineHelpText>The parent sales order of this purchase order</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_System_Number__c</fullName>
        <description>A system auto-number used within the Purchase Order Number to create a unique number. This is a system only field.</description>
        <displayFormat>{00000}</displayFormat>
        <label>PO System Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Received_Date__c</fullName>
        <description>The date the product was received from the vendor.</description>
        <inlineHelpText>The date the product was received from the vendor.</inlineHelpText>
        <label>Product Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Released_Timestamp__c</fullName>
        <description>The date and time the purchase order was released.</description>
        <inlineHelpText>The date and time the purchase order was released.</inlineHelpText>
        <label>Released Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requested_Ship_Date__c</fullName>
        <description>The date you are requesting the order is ship</description>
        <inlineHelpText>The date you are requesting the order is ship</inlineHelpText>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the purchase order.</description>
        <inlineHelpText>The status of the purchase order.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Timestamp__c</fullName>
        <description>The date and time this purchase order was submitted.</description>
        <inlineHelpText>The date and time this purchase order was submitted.</inlineHelpText>
        <label>Submitted Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <description>The subtotal of the purchase order.</description>
        <inlineHelpText>The subtotal of the purchase order.</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <description>The tax applied to the purchase order.</description>
        <inlineHelpText>The tax applied to the purchase order.</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Subtotal__c +  Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The vendor linked to the PO</description>
        <inlineHelpText>The vendor linked to the PO</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The account must be of type Vendor.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Purchase Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <recordTypes>
        <fullName>Cost_Purchase_Order</fullName>
        <active>true</active>
        <description>Record type for non-product / cost purchase orders.</description>
        <label>Cost Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Purchase_Order</fullName>
        <active>true</active>
        <description>Record type for 3rd party product purchase orders.</description>
        <label>Product Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>RbA_Purchase_Order</fullName>
        <active>true</active>
        <description>Record type for Renewal by Andersen purchase orders.</description>
        <label>RbA Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Purchase_Order</fullName>
        <active>true</active>
        <label>Service Purchase Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>